--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Retarded Unicorns - MOTD</title>
-  <link rel="stylesheet" href="motd.css">
+  <link rel="stylesheet" href="stlye.css">
 </head>
 <body>
   <div class="motd-container">
