--- a/index.html
+++ b/index.html
@@ -81,12 +81,11 @@
         <h2>Links</h2>
         <ul>
           <li><a href="https://discord.gg/NcaRsM7MHP">Discord</a></li>
-          <li><a href="#">Shop</a></li>
-          <li><a href="#">Bewerben</a></li>
+          <li><a href="#">Steam Gruppe</a></li>
         </ul>
       </div>
       <div class="box">
-        <h2>Platzhalter 1</h2>
+        <h2>Bald verfügbar...</h2>
         <p>Bald verfügbar...</p>
       </div>
       <div class="box">
