--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div class="box">
         <h2>Links</h2>
         <ul>
-          <li><a href="https://discord.gg/NcaRsM7MHP">Discord</a></li>
+          <li><a href="https://discord.gg/NcaRsM7MHP" target="_blank">Discord</a></li>
           <li><a href="#">Steam Gruppe</a></li>
         </ul>
       </div>
