--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <!-- Logo -->
   <div class="logo">
-    <img src="RetardedUnicornProfilbild.png" alt="Logo">
+    <img src="logo.png" alt="Logo">
   </div>
 
   <!-- Container -->
@@ -80,12 +80,12 @@
       <div class="box">
         <h2>Links</h2>
         <ul>
-          <li><a href="javascript:externalLink('https://discord.gg/NcaRsM7MHP')">Discord</a></li>
-          <li><a href="#">Steam Gruppe</a></li>
+          <li>Discord: Im Chat <strong>!discord</strong> eingeben</li>
+          <li>Steamgruppe: Im Chat <strong>!steam</strong> eingeben</li>
         </ul>
       </div>
       <div class="box">
-        <h2>Bald verfügbar...</h2>
+        <h2>Platzhalter 1</h2>
         <p>Bald verfügbar...</p>
       </div>
       <div class="box">
