--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <!-- Logo -->
   <div class="logo">
-    <img src="logo.png" alt="Logo">
+    <img src="RetardedUnicornProfilbild.png" alt="Logo">
   </div>
 
   <!-- Container -->
