--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </ul>
       </div>
       <div class="box">
-        <h2>Platzhalter 1</h2>
+        <h2>Bald verfügbar...</h2>
         <p>Bald verfügbar...</p>
       </div>
       <div class="box">
