--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
         </ul>
       </div>
       <div class="box">
-        <h2>Updates</h2>
+        <h2>Updates B1.0</h2>
         <ul>
-          <li>Bald verfügbar...</li>
+          <li>Coole Retarded Unicorns Schilder eingefügt</li>
           <li></li>
           <li></li>
         </ul>
