--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
         </ul>
       </div>
       <div class="box">
-        <h2>Updates B1.1</h2>
+        <h2>Updates B1.3</h2>
         <ul>
-          <li>Coole Retarded Unicorns Schilder eingefügt</li>
-          <li>Nickname Mod Angepasst das es auch im Chat ist</li>
+          <li>Skins & Trails Eingefügt</li>
+          <li>Pointshop Trading & Titel</li>
           <li></li>
         </ul>
       </div>
