--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="box">
         <h2>News</h2>
         <ul>
-          <li>Bald verfügbar...</li>
+          <li>Wir suchen noch Aktive Teammitglieder <3!</li>
           <li></li>
           <li></li>
         </ul>
@@ -38,7 +38,7 @@
       <div class="box">
         <h2>Events</h2>
         <ul>
-          <li>Bald verfügbar...</li>
+          <li>Halloween Event 24.10 - 31.10</li>
           <li></li>
           <li></li>
         </ul>
@@ -62,16 +62,16 @@
       <div class="box">
         <h2>Informationen</h2>
         <ul>
-          <li>Bald verfügbar...</li>
-          <li></li>
+          <li>Eröffnung 07.10.25</li>
+          <li>Redeem Code "Erster" bis zum 10.10.25</li>
           <li></li>
         </ul>
       </div>
       <div class="box">
-        <h2>Updates B1.3</h2>
+        <h2>Updates B1.8</h2>
         <ul>
-          <li>Skins & Trails Eingefügt</li>
-          <li>Pointshop Trading & Titel</li>
+          <li>Vorbereitungen fürs Halloween Event</li>
+          <li>Erste Map Rotation Eingefügt</li>
           <li></li>
         </ul>
       </div>
@@ -89,8 +89,9 @@
         <p>Bald verfügbar...</p>
       </div>
       <div class="box">
-        <h2>Bald verfügbar...</h2>
-        <p>Bald verfügbar...</p>
+        <h2>Redeem Codes</h2>
+        <p>Erster</p>
+        <p></p>
       </div>
     </div>
   </div>
