--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         <ul>
           <li>Discord: Im Chat <strong>!discord</strong> eingeben</li>
           <li>Steamgruppe: Im Chat <strong>!steam</strong> eingeben</li>
+          <li>Server-Kollektion: Im Chat <strong>!kollektion</strong></li>
         </ul>
       </div>
       <div class="box">
