--- a/index.html
+++ b/index.html
@@ -68,11 +68,12 @@
         </ul>
       </div>
       <div class="box">
-        <h2>Updates B1.8</h2>
+        <h2>Updates B1.9</h2>
         <ul>
           <li>Vorbereitungen fürs Halloween Event</li>
           <li>Erste Map Rotation Eingefügt</li>
-          <li></li>
+          <li>Trading bug Geffixt</li>
+          <li>Special Messer für Release eingefügt</li>
         </ul>
       </div>
 
