--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <ul>
           <li>Vorbereitungen fürs Halloween Event</li>
           <li>Erste Map Rotation Eingefügt</li>
-          <li>Trading bug Geffixt</li>
+          <li>Trading bug Gefixxt</li>
           <li>Special Messer für Release eingefügt</li>
         </ul>
       </div>
